--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,123 +1,137 @@
 ---
 import Layout from '../layouts/Layout.astro';
 import Card from '../components/Card.astro';
+
+const projects = [
+    {
+      title: 'Cines Unidos clone',
+      description: `Es un proyecto que simula la página de Cines Unidos. La página se actualizaba diariamente mediante un scraping de la página real, para obtener la información de las películas en cartelera. Utilicé el CI/CD de GitHub Actions para automatizar el proceso de scraping y despliegue de la página. Gracias a este proyecto, aprendí a resolver problemas con GitHub Actions y a crear una API basada en un scraping.
+      `,
+      url: '/projects/cine.png',
+      link: 'https://github.com/time9683/cine',
+      live:"https://cine.deno.dev/",
+      tecnologies: ['Node.js', 'Preact',"Tailwind"]
+    },
+    {
+      title: 'CloudHome',
+      description: ' CloudHome es una aplicación inspirada en Google Drive, con funcionalidades como subir archivos y crear carpetas, pero diseñada para uso local. Permite ver desde la web los archivos y carpetas creados en el almacenamiento local. Dado que es un proyecto pensado principalmente para uso local, no incluye la función de vista previa.',
+      url: '/projects/cloud.png',
+      link: "https://github.com/time9683/CloudHome",
+      tecnologies: ['React', 'Node.js']
+    },
+    {
+      title: 'Simulador de movil',
+      description: `
+  Un simulador de interfaz de un móvil que emula algunas aplicaciones, como la cámara, la galería y el grabador de voz. Además, incluye la simulación de llamadas mediante un servidor WebSocket con WebRTC.
+      `,
+      url: '/projects/so.png',
+      link: 'https://github.com/time9683/mobile-simulator',
+      live:"https://mobile-simulator.vercel.app/",
+      tecnologies: ['React', 'Node.js', 'WebRTC',"websockets","Tailwind"]
+    },
+    {
+      title: 'Web itcscience',
+      description: ` Este proyecto fue principalmente una colaboración con una comunidad de programación, donde me encargué del desarrollo del backend para permitir suscripciones al newsletter y gestionar la información de los formularios de la página. Además, creé la estructura necesaria para implementar un blog a partir de archivos Markdown.`,
+      url: '/projects/it.png',
+      link: 'https://github.com/yeho/webcomunidad',
+      live:"https://itcscience.org/",
+      tecnologies: ['Html', 'Css','Node.js']
+    }
+
+  ]
 ---
 
 <Layout title="Welcome to Astro.">
-	<main>
-		<svg
-			class="astro-a"
-			width="495"
-			height="623"
-			viewBox="0 0 495 623"
-			fill="none"
-			xmlns="http://www.w3.org/2000/svg"
-			aria-hidden="true"
-		>
-			<path
-				fill-rule="evenodd"
-				clip-rule="evenodd"
-				d="M167.19 364.254C83.4786 364.254 0 404.819 0 404.819C0 404.819 141.781 19.4876 142.087 18.7291C146.434 7.33701 153.027 0 162.289 0H332.441C341.703 0 348.574 7.33701 352.643 18.7291C352.92 19.5022 494.716 404.819 494.716 404.819C494.716 404.819 426.67 364.254 327.525 364.254L264.41 169.408C262.047 159.985 255.147 153.581 247.358 153.581C239.569 153.581 232.669 159.985 230.306 169.408L167.19 364.254ZM160.869 530.172C160.877 530.18 160.885 530.187 160.894 530.195L160.867 530.181C160.868 530.178 160.868 530.175 160.869 530.172ZM136.218 411.348C124.476 450.467 132.698 504.458 160.869 530.172C160.997 529.696 161.125 529.242 161.248 528.804C161.502 527.907 161.737 527.073 161.917 526.233C165.446 509.895 178.754 499.52 195.577 500.01C211.969 500.487 220.67 508.765 223.202 527.254C224.141 534.12 224.23 541.131 224.319 548.105C224.328 548.834 224.337 549.563 224.347 550.291C224.563 566.098 228.657 580.707 237.264 593.914C245.413 606.426 256.108 615.943 270.749 622.478C270.593 621.952 270.463 621.508 270.35 621.126C270.045 620.086 269.872 619.499 269.685 618.911C258.909 585.935 266.668 563.266 295.344 543.933C298.254 541.971 301.187 540.041 304.12 538.112C310.591 533.854 317.059 529.599 323.279 525.007C345.88 508.329 360.09 486.327 363.431 457.844C364.805 446.148 363.781 434.657 359.848 423.275C358.176 424.287 356.587 425.295 355.042 426.275C351.744 428.366 348.647 430.33 345.382 431.934C303.466 452.507 259.152 455.053 214.03 448.245C184.802 443.834 156.584 436.019 136.218 411.348Z"
-				fill="url(#paint0_linear_1805_24383)"></path>
-			<defs>
-				<linearGradient
-					id="paint0_linear_1805_24383"
-					x1="247.358"
-					y1="0"
-					x2="247.358"
-					y2="622.479"
-					gradientUnits="userSpaceOnUse"
-				>
-					<stop stop-opacity="0.9"></stop>
-					<stop offset="1" stop-opacity="0.2"></stop>
-				</linearGradient>
-			</defs>
-		</svg>
-		<h1>Welcome to <span class="text-gradient">Astro</span></h1>
-		<p class="instructions">
-			To get started, open the directory <code>src/pages</code> in your project.<br />
-			<strong>Code Challenge:</strong> Tweak the "Welcome to Astro" message above.
-		</p>
-		<ul role="list" class="link-card-grid">
-			<Card
-				href="https://docs.astro.build/"
-				title="Documentation"
-				body="Learn how Astro works and explore the official API docs."
-			/>
-			<Card
-				href="https://astro.build/integrations/"
-				title="Integrations"
-				body="Supercharge your project with new frameworks and libraries."
-			/>
-			<Card
-				href="https://astro.build/themes/"
-				title="Themes"
-				body="Explore a galaxy of community-built starter themes."
-			/>
-			<Card
-				href="https://astro.build/chat/"
-				title="Community"
-				body="Come say hi to our amazing Discord community. ❤️"
-			/>
-		</ul>
-	</main>
+
+  <main class="p-4" >
+    
+    <section class="max-w-2xl mx-auto pb-10 pt-10 flex flex-col gap-2">
+
+      <img src="" alt="">
+      <h1 class="text-white font-bold text-3xl text-wrap mb-4">Hola! soy Luis Hernadez</h1>
+      <p class="text-white text-balance text-lg"> 
+        Estudiante de ingenieria en Computacion, especializado en el <strong class="text-blue-400">desarrollo de aplicaciones web </strong> y  apasicionado por la <strong class="text-blue-400">programacion de bajo nivel.</strong>
+      </p>
+      <div>
+        <a href="https://github.com/time9683" 
+        target="_blank" rel="noopener noreferrer"
+        class="py-1 px-2 bg-blue-800/80 text-white rounded-sm cursor-pointer  hover:bg-blue-800 transition-colors self-start">Github</a>
+        <a
+         target="_blank" rel="noopener noreferrer"
+        class="py-1 px-2 bg-blue-800/80 text-white rounded-sm cursor-pointer  hover:bg-blue-800 transition-colors self-start"
+         href="mailto:siul210704@gmail.com">mi correo</a>
+        
+      </div>
+    </section>
+
+    
+    <section class="max-w-2xl mx-auto">
+      <div class="flex gap-2 text-white justify-start items-start">
+        <svg class="size-7" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round"><path stroke="none" d="M0 0h24v24H0z" fill="none"></path><path d="M7 8l-4 4l4 4"></path><path d="M17 8l4 4l-4 4"></path><path d="M14 4l-4 16"></path></svg>
+        <h2 class="text-white text-2xl font-bold mb-6">Proyectos</h2>
+      </div>
+
+      <div class="flex flex-col gap-5">
+
+
+
+        {
+          projects.map((project) => (
+            <Card {...project} />
+          ))
+        }
+
+</div>
+
+    
+      </div>
+
+
+
+
+    </section>
+
+
+    <section class="max-w-2xl mx-auto py-10 text-white [&>p>strong]:text-blue-400">
+      <h3 class="text-2xl text-balance font-bold">Tecnologias que manejo</h3>
+
+      <div class="flex flex-wrap gap-2 mt-4">
+        {['HTML', 'CSS', 'Tailwind', 'JavaScript', 'React', 'Node.js', 'Deno'].map((tech) => (
+          <span class="bg-blue-800/80 text-white py-1 px-2 rounded-lg">{tech}</span>
+        ))}
+      </div>
+    
+    
+    </section>
+
+
+
+
+
+    <section class="max-w-2xl mx-auto py-10 text-white [&>p>strong]:text-blue-400">
+      <h3 class="text-2xl text-balance font-bold">Sobre mí</h3>
+
+      <p class="my-4 text-pretty font-mono">
+        Me llamo <strong>Luis Hernandez</strong>. Tengo como <strong>hobby</strong> el estudio de inglés y otros idiomas. Empecé en la <strong>programación</strong> con la idea de crear mods para Minecraft. Luego de ver el <strong>desafío</strong> que representaba Java, decidí estudiar <strong>C</strong> para crear herramientas de sistema, como <a>Metadata Extractor MP3</a>, un programa para extraer metadatos de archivos MP3. Este proyecto fue muy sencillo, pero resultó significativo por ser el primero.
+      </p>
+      
+      <p class="my-4 text-pretty font-mono">
+        Podría decirse que inicié en el <strong>desarrollo web</strong> a los 15 años, motivado por comprender cómo funcionaban las páginas web y cómo se podían crear. Unos años después, tuve la necesidad de contar con una <strong>unidad central de información</strong> en mi PC, accesible desde cualquier lugar. Así que, con <strong>React</strong> y <strong>Node.js</strong>, creé un <strong>servidor de archivos</strong> que me permitía acceder a mis archivos desde cualquier sitio.
+      </p>
+      
+      <p class="my-4 text-pretty font-mono">
+        Tuve la oportunidad de <strong>liderar</strong> junto a unos compañeros un proyecto de desarrollo de una aplicación web que simulaba un sistema de gestión para una fábrica de chocolate. Gracias a este proyecto, pude aprender mucho más sobre el <strong>desarrollo web</strong> y la <strong>gestión de proyectos</strong>.
+      </p>
+      
+    </section>
+
+  </main>
+
+
+
+
 </Layout>
 
 <style>
-	main {
-		margin: auto;
-		padding: 1rem;
-		width: 800px;
-		max-width: calc(100% - 2rem);
-		color: white;
-		font-size: 20px;
-		line-height: 1.6;
-	}
-	.astro-a {
-		position: absolute;
-		top: -32px;
-		left: 50%;
-		transform: translatex(-50%);
-		width: 220px;
-		height: auto;
-		z-index: -1;
-	}
-	h1 {
-		font-size: 4rem;
-		font-weight: 700;
-		line-height: 1;
-		text-align: center;
-		margin-bottom: 1em;
-	}
-	.text-gradient {
-		background-image: var(--accent-gradient);
-		-webkit-background-clip: text;
-		-webkit-text-fill-color: transparent;
-		background-size: 400%;
-		background-position: 0%;
-	}
-	.instructions {
-		margin-bottom: 2rem;
-		border: 1px solid rgba(var(--accent-light), 25%);
-		background: linear-gradient(rgba(var(--accent-dark), 66%), rgba(var(--accent-dark), 33%));
-		padding: 1.5rem;
-		border-radius: 8px;
-	}
-	.instructions code {
-		font-size: 0.8em;
-		font-weight: bold;
-		background: rgba(var(--accent-light), 12%);
-		color: rgb(var(--accent-light));
-		border-radius: 4px;
-		padding: 0.3em 0.4em;
-	}
-	.instructions strong {
-		color: rgb(var(--accent-light));
-	}
-	.link-card-grid {
-		display: grid;
-		grid-template-columns: repeat(auto-fit, minmax(24ch, 1fr));
-		gap: 2rem;
-		padding: 0;
-	}
+
 </style>
