--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -41,7 +41,7 @@ const projects = [
   ]
 ---
 
-<Layout title="Welcome to Astro.">
+<Layout title="Luis Portafolio">
 
   <main class="p-4" >
     
