add perfil image

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -47,8 +47,10 @@ const projects = [
     
     <section class="max-w-2xl mx-auto pb-10 pt-10 flex flex-col gap-2">
 
-      <img src="" alt="">
-      <h1 class="text-white font-bold text-3xl text-wrap mb-4">Hola! soy Luis Hernadez</h1>
+      <div class="flex gap-4 items-center">
+        <h1 class="text-white font-bold text-3xl text-wrap mb-4">Hola! soy Luis Hernadez</h1>
+        <img src="/projects/perfil.jpg" alt="foto luis hernandez" class="rounded-full size-24 ">
+      </div>
       <p class="text-white text-balance text-lg"> 
         Estudiante de ingenieria en Computacion, especializado en el <strong class="text-blue-400">desarrollo de aplicaciones web </strong> y  apasicionado por la <strong class="text-blue-400">programacion de bajo nivel.</strong>
       </p>
