agregar enlace a LinkedIn en la página de inicio

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -58,6 +58,9 @@ const projects = [
         <a href="https://github.com/time9683" 
         target="_blank" rel="noopener noreferrer"
         class="py-1 px-2 bg-blue-800/80 text-white rounded-sm cursor-pointer  hover:bg-blue-800 transition-colors self-start">Github</a>
+        <a href="https://www.linkedin.com/in/luis-hernandez-324270196/" 
+        target="_blank" rel="noopener noreferrer"
+        class="py-1 px-2 bg-blue-800/80 text-white rounded-sm cursor-pointer  hover:bg-blue-800 transition-colors self-start">Linkedin</a>
         <a
          target="_blank" rel="noopener noreferrer"
         class="py-1 px-2 bg-blue-800/80 text-white rounded-sm cursor-pointer  hover:bg-blue-800 transition-colors self-start"
