--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -101,7 +101,7 @@ const projects = [
       <h3 class="text-2xl text-balance font-bold">Tecnologias que manejo</h3>
 
       <div class="flex flex-wrap gap-2 mt-4">
-        {['HTML', 'CSS', 'Tailwind', 'JavaScript', 'React', 'Node.js', 'Deno'].map((tech) => (
+        {['HTML', 'CSS', 'Tailwind', 'JavaScript', 'React', 'Node.js', 'Deno',"Rust","Python"].map((tech) => (
           <span class="bg-blue-800/80 text-white py-1 px-2 rounded-lg">{tech}</span>
         ))}
       </div>
