--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,4 +1,5 @@
 ---
+import  Analytics  from '@vercel/analytics/astro';
 interface Props {
 	title: string;
 }
@@ -28,6 +29,7 @@ const { title } = Astro.props;
 	</head>
 	<body>
 		<slot />
+		<Analytics/>
 	</body>
 </html>
 <style is:global>
