cambiar imágenes de proyectos a formato WebP para mejorar la optimización

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -7,7 +7,7 @@ const projects = [
       title: 'Cines Unidos clone',
       description: `Es un proyecto que simula la página de Cines Unidos. La página se actualizaba diariamente mediante un scraping de la página real, para obtener la información de las películas en cartelera. Utilicé el CI/CD de GitHub Actions para automatizar el proceso de scraping y despliegue de la página. Gracias a este proyecto, aprendí a resolver problemas con GitHub Actions y a crear una API basada en un scraping.
       `,
-      url: '/projects/cine.png',
+      url: '/projects/cine.webp',
       link: 'https://github.com/time9683/cine',
       live:"https://cine.deno.dev/",
       tecnologies: ['Node.js', 'Preact',"Tailwind"]
@@ -15,7 +15,7 @@ const projects = [
     {
       title: 'CloudHome',
       description: ' CloudHome es una aplicación inspirada en Google Drive, con funcionalidades como subir archivos y crear carpetas, pero diseñada para uso local. Permite ver desde la web los archivos y carpetas creados en el almacenamiento local. Dado que es un proyecto pensado principalmente para uso local, no incluye la función de vista previa.',
-      url: '/projects/cloud.png',
+      url: '/projects/cloud.webp',
       link: "https://github.com/time9683/CloudHome",
       tecnologies: ['React', 'Node.js']
     },
@@ -24,7 +24,7 @@ const projects = [
       description: `
   Un simulador de interfaz de un móvil que emula algunas aplicaciones, como la cámara, la galería y el grabador de voz. Además, incluye la simulación de llamadas mediante un servidor WebSocket con WebRTC.
       `,
-      url: '/projects/so.png',
+      url: '/projects/so.webp',
       link: 'https://github.com/time9683/mobile-simulator',
       live:"https://mobile-simulator.vercel.app/",
       tecnologies: ['React', 'Node.js', 'WebRTC',"websockets","Tailwind"]
@@ -32,7 +32,7 @@ const projects = [
     {
       title: 'Web itcscience',
       description: ` Este proyecto fue principalmente una colaboración con una comunidad de programación, donde me encargué del desarrollo del backend para permitir suscripciones al newsletter y gestionar la información de los formularios de la página. Además, creé la estructura necesaria para implementar un blog a partir de archivos Markdown.`,
-      url: '/projects/it.png',
+      url: '/projects/it.webp',
       link: 'https://github.com/yeho/webcomunidad',
       live:"https://itcscience.org/",
       tecnologies: ['Html', 'Css','Node.js']
@@ -49,7 +49,7 @@ const projects = [
 
       <div class="flex gap-4 items-center">
         <h1 class="text-white font-bold text-3xl text-wrap mb-4">Hola! soy Luis Hernadez</h1>
-        <img src="/projects/perfil.jpg" alt="foto luis hernandez" class="rounded-full size-24 ">
+        <img src="/projects/perfil.webp" alt="foto luis hernandez" class="rounded-full size-24 ">
       </div>
       <p class="text-white text-balance text-lg"> 
         Estudiante de ingenieria en Computacion, especializado en el <strong class="text-blue-400">desarrollo de aplicaciones web </strong> y  apasicionado por la <strong class="text-blue-400">programacion de bajo nivel.</strong>
